splitting accross multiple files the js

--- a/src/main/webapp/partial/issues.mustache
+++ b/src/main/webapp/partial/issues.mustache
@@ -1,6 +1,7 @@
-<ul>
+Filter (hit ENTER): <input id="issuesFilter" can-enter="{ filterIssues @element }" />
+<ul id="issues">
     {{#issues}}
-    <li class="{{ class }}">
+        <li style="display: {{ display }}">
         <a href={{ url }}>{{ title }}</a> : {{ body }}
     </li>
     {{/issues}}
